using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;

public class Player : MonoBehaviour
{
    public string zhaoshi;
    public int health;  //血量
    public int Energy;
    //private Animator myAnim;
    public int Priority = 0;  //优先级
    public bool Rebounding = false;  //是否反弹
    public bool Defensing = false;  //是否防御
    public AI AI;
    public GameObject AIgameobject;
    public bool Chose = false;    //是否选择了技能
    public int Career;  //技能点数(职业技能点数)
    public string StringCareer;  //职业名字
    public int Ground;  //回合数
    public int RascallyNumber;  //老赖技能获取能量数
    public int ArroganceNumber;  //傲慢点数
    public bool Thiefing;  //神偷判定
    public int PangolinNumber; //穿山甲叠加层数
    public bool IsPangolin;  //叠加判定

    public Text countDownText; // 倒计时文本
    public float countDownTimer = 10f; // 倒计时时间
    public Text GroundText; //回合数文本

    public bool Win=true;  //是否获胜

    void Start()
    {
        Win = true;
        health = 1;
        countDownTimer = 10f;
        Ground = 1;
        RascallyNumber = 1;
        ArroganceNumber = 0;
        Thiefing = false;
        PangolinNumber = 0;
        StringCareer = Whole.PlayerCareer;
        Career = 0;
        Energy = 0;   //初始化
        //myAnim = GetComponent<Animator>();
        countDownText = countDownText.GetComponent<Text>();
        GroundText = GroundText.GetComponent<Text>();
        AI = FindObjectOfType<AI>();
        if (StringCareer == "Thief" || StringCareer == "Assassin" || StringCareer=="Guard" || 
            StringCareer== "Rascally" || StringCareer== "Arrogance" ||StringCareer== "Pangolin")
        {
            Career = 1;
        }
        if (StringCareer =="Turtle")
        {
            Energy = 1;
            Career = 1;
        }
    }

    void Update()
    {
        GroundText.text = Ground.ToString();
        if (countDownTimer > 0f)
        {
            countDownTimer -= Time.deltaTime;

            // 将剩余时间显示在UI界面上的倒计时文本中
            countDownText.text = Mathf.RoundToInt(countDownTimer).ToString();
        }
        else
        {
            AI.AIplaying();
            if (Chose==false)
            {
                if (StringCareer== "Pangolin" || StringCareer=="Thief")
                {
                    Defense();
                }
                else
                {
                    RubbingEnergy();
                }
            }
            Despare();
            Sum();
            countDownTimer = 10f;
            Debug.Log(health);
            Debug.Log(AI.health);
        }
    }
    public void RubbingEnergy()   //能量
    {
        zhaoshi = "RubbingEnergy";
    }
    public void RubbingEnergy1()   //能量
    {
        Chose = true;
        countDownTimer = 2f;
        Energy += 1;
        Debug.Log("You:RubbingEnergy");
        Priority = 0;
    }
    public void Gun()  //枪
    {
        zhaoshi = "Gun";
    }
    public void Gun1()  //枪
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 1;
        Energy -= 1;
        Debug.Log("You:Gun");
    }
    public void Rebound()   //反弹
    {
        zhaoshi = "Rebound";
    }
    public void Rebound1()   //反弹
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 100;
        Rebounding = true;
        Energy -= 2;
        Debug.Log("You:Rebound");
    }
    public void Defense()   //防御
    {
        zhaoshi = "Defense";
    }
    public void Defense1()   //防御
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 1;
        Defensing = true;
        Debug.Log("You:Defense");
    }
    public void HolyGrail()   //大招
    {
        zhaoshi = "HolyGrail1";
    }
    public void HolyGrail1()   //大招
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 2;
        Energy -= 4;
        Debug.Log("You:HolyGrail");
    }
    public void Assassinate()  // 刺客技能：暗杀
    {
        zhaoshi = "Assassinate";
    }
    public void Assassinate1()  // 刺客技能：暗杀
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 1;
        Career -= 1;
        Debug.Log("You:Assassinate");
    }

    //public void Steal()   // 盗贼技能：偷取
    //{
    //    Chose = true;
    //    countDownTimer = 2f;
    //    Priority = 1;
    //}
    public void King() // 国王技能：王权
    {
        zhaoshi = "King";
    }
    public void King1() // 国王技能：王权
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 2;
        Energy -= 2;
        Debug.Log("You:King");
    }
    public void Guard()  // 护卫技能：能防
    {
        zhaoshi = "Guard";
    }
    public void Guard1()  // 护卫技能：能防
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 1;
        Defensing = true;
        Energy += 1;
        Debug.Log("You:Guard");
    }
    public void Turtle()  //乌龟技能：龟缩
    {
        zhaoshi = "Turtle";
    }
    public void Turtle1()  //乌龟技能：龟缩
    {
        Chose = true;
        countDownTimer = 2f;
        Energy -= 1;
        Priority = 100;
        Rebounding = true;
        Debug.Log("You:Turtle");
    }
    public void Rascally()  //老赖技能：汲能
    {
        zhaoshi = "Rascally";
    }
    public void Rascally1()  //老赖技能：汲能
    {
        Chose = true;
        countDownTimer = 2f;
        Priority = 0;
        Energy += RascallyNumber;
        RascallyNumber += 1;
    }
    public void Arrogance()  //傲慢技能：嘲讽
    {
        zhaoshi = "Arrogance";
    }
    public void Arrogance1()  //傲慢技能：嘲讽
    {
        Chose = true;
        countDownTimer = 2f;
        ArroganceNumber += 1;
        Priority = 0;
    }
    public void Thief()  //盗贼技能：神偷
    {
        zhaoshi = "Thief";
    }
    public void Thief1()  //盗贼技能：神偷
    {
        Chose = true;
        countDownTimer = 2f;
        Career -= 1;
        Thiefing = true;
        Priority = 1;
    }

    public void Pangolin()
    {
        zhaoshi = "Pangolin";
    }
    public void Pangolin1()
    {
        Chose = true;
        countDownTimer = 2f;
        PangolinNumber += 1;
        Priority = 0;
        IsPangolin=true;
    }

    public void Despare()   //判定
    {
        Ground += 1;
        if (zhaoshi=="Thief")
        {
            Thief1();
        }
        else if (zhaoshi=="RubbingEnergy")
        {
            RubbingEnergy1();
        }
        else if (zhaoshi == "Gun")
        {
            Gun1();
        }
        else if (zhaoshi == "Guard")
        {
            Guard1();
        }
        else if (zhaoshi == "HolyGrail")
        {
            HolyGrail1();
        }
        else if (zhaoshi == "Rebound")
        {
            Rebound1();
        }
        else if (zhaoshi == "Defense")
        {
            Defense1();
        }
        else if (zhaoshi == "Assassinate")
        {
            Assassinate1();
        }
        else if (zhaoshi == "King")
        {
            King1();
        }
        else if (zhaoshi == "Pangolin")
        {
            Pangolin1();
        }
        else if (zhaoshi == "Turtle")
        {
            Turtle1();  
        }
        else if (zhaoshi == "Rascally")
        {
            Rascally1();
        }
        else if (zhaoshi == "Arrogance")
        {
            Arrogance1();
        }
        //if (IsPangolin)  //穿山甲职业判定
        //{
        //    if (PangolinNumber >= 5)  //秒杀
        //    {
        //        Destroy(AIgameobject);
        //        Debug.Log("WIN");
        //    }
        //    else if (PangolinNumber >= 3)  //免疫普攻判定
        //    {
        //        if (AI.Priority == 2)
        //        {
        //            Destroy(gameObject);
        //            Debug.Log("LOSE");
        //        }
        //        else
        //        {
        //            Debug.Log("Continue");
        //        }
        //    }
        //    else  //否则就相当于普通搓
        //    {
        //        if (AI.Defensing==false && AI.Rebounding==false && AI.Priority>=2)
        //        {
        //            Destroy(gameObject) ;
        //            Debug.Log("LOSE");
        //        }
        //        else if (AI.Defensing == false && AI.Rebounding == false && AI.Priority == 1 && Defensing==false)
        //        {
        //            Destroy(gameObject);
        //            Debug.Log("LOSE");
        //        }
        //        else
        //        {
        //            Debug.Log("Continue");
        //        }
        //    }
        //}
        if (Thiefing)
        {
            if (AI.Defensing==true || AI.Rebounding==true)  
            {
                Career -= 1;
            }
            else if (AI.Defensing==false && AI.Priority>0)
            {
                AI.Win=false;
            }
            else if (AI.Priority==0)
            {
                if (AI.Thiefing==true)
                {
                    Debug.Log("Continue");
                }
                else
                {
                    AI.Energy -= 1;
                    Energy += 1;
                    Career += 1;
                    Debug.Log("Continue");
                }

            }
            Thiefing=false;
        }
        else
        {
             if (Priority < AI.Priority && AI.Rebounding==false && AI.Defensing==false)  //AI攻击优先级更高
            {
                Win = false;
            }
            else if (Priority < AI.Priority && AI.Rebounding==true && Defensing==false && Priority!=0) //AI反弹成功
            {
                Win = false;
            }
            else if(Priority==AI.Priority)  //优先级一样，相互抵消
            {
                if (AI.Thiefing==true)
                {
                    Energy -= 1;
                    AI.Energy += 1;
                    AI.Career += 1;
                    Debug.Log("Continue");
                }
                else
                {
                    Debug.Log("Continue");
                }

            }
            else if (Defensing==true && AI.Priority!=2)  //玩家防御，AI不用大招，继续游戏
            {
                if (AI.Thiefing==true)
                {
                    AI.Career -= 1;
                    Debug.Log("Continue");
                }
                else
                {
                    Debug.Log("Continue");
                }

            }
            else if(Rebounding==true && (AI.Priority==0 || (AI.Priority!=0 && AI.Defensing==true)))  //玩家反弹失败
            {
                if (AI.Thiefing==true)
                {
                    AI.Career -= 1;
                    Debug.Log("Continue");
                }
                else
                {
                    Debug.Log("Continue");
                }

            }
            else if (Priority==0 && (AI.Defensing==true || AI.Priority==0 || AI.Rebounding==true))  //玩家搓能量，AI不攻击
            {
                if (AI.Thiefing==true)
                {
                    AI.Career += 1;
                    AI.Energy += 1;
                }
                else
                {
                    Debug.Log("Continue");
                }

            }
            else  //否则就是玩家赢
            {
                if (AI.Thiefing==true)
                {
                    Win = false;
                }
                else
                {
                    AI.Win = false;
                }

            }           
        }

        if (ArroganceNumber>=3 && AI.ArroganceNumber>=3)
        {
            ArroganceNumber = 0;
            AI.ArroganceNumber = 0;
            Debug.Log("Continue");
        }
        else if (ArroganceNumber>=3)
        {
            Destroy(AIgameobject);
            Debug.Log("WIN");
        }
        else if(AI.ArroganceNumber>=3) 
        {
            Destroy(gameObject);
            Debug.Log("LOSE");
        }
    }

    public void Sum()  //结算
    {
        if (AI.Win == false)
        {
            if (Thiefing)
            {
                if (AI.Priority == 1)
                {
                    AI.health -= 1;
                }
                else if (AI.Priority == 2)
                {
                    AI.health -= 2;
                }
            }
            else if (Rebounding==true)
            {
                if (AI.Priority==1)
                {
                    AI.health -= 1;
                }
                else if(AI.Priority==2)
                {
                    AI.health -= 2;
                }
            }
            else
            {
                if (Priority == 1)
                {
                    AI.health -= 1;
                }
                else if (Priority == 2)
                {
                    AI.health -= 2;
                }
            }
        }
        else if (Win == false)
        {
            if (AI.Thiefing)
            {
                if (Priority == 1)
                {
                    health -= 1;
                }
                else if (Priority == 2)
                {
                    health -= 2;
                }
            }
            else if (AI.Rebounding == true)
            {
                if (Priority == 1)
                {
                    health -= 1;
                }
                else if (Priority == 2)
                {
                    health -= 2;
                }
            }
            else
            {
                if (AI.Priority == 1)
                {
                    health -= 1;
                }
                else if (AI.Priority == 2)
                {
                    health -= 2;
                }
            }
        }
        else
        {
            Debug.Log("Continue");
        }

        if (health<=0)
        {
            Destroy(gameObject);
            Debug.Log("LOST");
            //时间暂停
        }
        if (AI.health<=0)
        {
            Destroy(AIgameobject);
            Debug.Log(Win);
            //时间暂停
        }

        Chose = false;  //初始化
        Priority = 0;
        Defensing = false;
        Rebounding = false;
        Thiefing = false;
        AI.Rebounding = false;
        AI.Priority = 0;
        AI.Defensing = false;
        AI.Thiefing = false;

        //AI职业点数判定
        if (AI.StringCareer == "Assassin" || AI.StringCareer == "Thief")   //刺客,盗贼职业点数判定
        {
            if (Ground % 2 == 1)
            {
                AI.Career += 1;
            }
        }
        else if (AI.StringCareer == "King")  //国王职业点数判定
        {
            if (AI.Energy % 2 == 0)
            {
                AI.Career = AI.Energy / 2;
            }
            else
            {
                AI.Career = (AI.Energy - 1) / 2;
            }
        }
        else if (AI.StringCareer == "Guard" || AI.StringCareer == "Rascally" || AI.StringCareer == "Arrogance")  //卫士等职业点数判定
        {
            AI.Career = 1;
        }
        else if (AI.StringCareer == "Turtle")  //乌龟职业点数判定
        {
            AI.Career = Energy;
        }


        if (StringCareer == "Assassin" || StringCareer == "Thief")   //刺客,盗贼职业点数判定
        {
            if (Ground % 2 == 1)
            {
                Career += 1;
            }
        }
        else if (StringCareer == "King")  //国王职业点数判定
        {
            if (Energy % 2 == 0)
            {
                Career = Energy / 2;
            }
            else
            {
                Career = (Energy - 1) / 2;
            }
        }
        else if (StringCareer == "Guard" || StringCareer == "Rascally" || StringCareer == "Arrogance")  //卫士等职业点数判定
        {
            Career = 1;
        }
        else if (StringCareer == "Turtle")  //乌龟职业点数判定
        {
            Career = Energy;
        }
    }
}
